@@ -2,6 +2,7 @@
 # ==============================================================================
 # Clone It!
 # ==============================================================================
+set -e
 
 function doClone ()
 {
