@@ -2,6 +2,7 @@
 # ==============================================================================
 # Deploy It!
 # ==============================================================================
+set -e
 
 function doDeploy ()
 {
