@@ -2,6 +2,7 @@
 # ==============================================================================
 # Generate It!
 # ==============================================================================
+set -e
 
 function doGenerate ()
 {
