@@ -2,6 +2,7 @@
 # ==============================================================================
 # Init It!
 # ==============================================================================
+set -e
 
 function doInit ()
 {
