@@ -2,6 +2,8 @@
 # ==============================================================================
 # Push It!
 # ==============================================================================
+set -e
+
 # Here branch is "source" to me
 # {
 BRANCH='source'
