@@ -2,6 +2,7 @@
 # ==============================================================================
 # Serve It!
 # ==============================================================================
+set -e
 
 function doServe ()
 {
