@@ -34,25 +34,17 @@ date: 2016-02-17 15:09:40
 + 不喜欢Java 和Python。
 + 尽管一直用Vim，但目前没有最爱的编辑器。
 + 在用了5 年Slackware 之后，最近2 年成了Arch 神教的忠实教徒。
-+ Linux 黑粉。
-+ 对空格有强烈的强迫，在以下情况下一定会后跟空格：
-  * 中英文混排，每个英文单词之后
-  * 非句末的半角符号之后
-  * 数字之后
-  * 代码中的函数名之后
-  * 以上情况不适用于文件名
-+ 当下没有女朋友，**求妹纸带走**。
-+ 非常喜欢的一本轻小说是支仓冻砂老师的《狼与香辛料》。
-+ 向往大崎娜娜，喜欢阿尔托利亚·潘德拉贡。
-+ 不喜欢卖肉/卖胸向动漫，但是喜欢卖妹妹的作品。
-+ 无条件喜欢型月社的作品。
++ 对空格有强烈的强迫。
++ 当下没有女朋友<s>，求妹纸带走</s>。
++ 非常喜欢的一本轻小说是支仓冻砂的《狼与香辛料》。
++ 喜欢阿尔托利亚·潘德拉贡。
++ 不太喜欢纯肉番。
++ 喜欢百合番和音乐主题的动画。
++ 型月社的作品多为真爱。
 + 对京阿尼的作品抱有高度的好感。
 + 不是很能接受漫画这种艺术形式。
 + 喜欢的作家是村上春树，其作品最为喜欢的是《奇鸟行状录》。
 + 喜欢梶浦由记的音乐，但对其本人知之甚少。
-+ 喜欢听各种各样的经历和故事。
-+ 所知甚少，不敢多言。
-+ 点滴信念，仍留心间。
 + 日常面部表情：
   * 平常地工作：(￣﹏￣)
   * 开心地工作：(￣▽￣")
@@ -63,7 +55,7 @@ date: 2016-02-17 15:09:40
 
 另外，你可以在此留言。
 
-2016 年夏初
+2016 年夏
 
 [@愛と奇跡の物語](http://arondight.github.io)
 
