@@ -1,3 +1,8 @@
+v2016-07-26
+  * Modify page "About"
+  * Modify post "GTK事件及信号机制"
+  * Modify build scripts
+
 v2016-07-25
   * Modify post "GTK事件及信号机制"
   * Update themes
